// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ExpandableSource should render correctly when not collapsed 1`] = `
<div>
  <div
    aria-pressed={false}
    className="md-fake-btn md-pointer--hover md-fake-btn--no-outline markdown-container md-paper md-paper--1 expandable-source"
    dangerouslySetInnerHTML={
      Object {
        "__html": "<pre class=\\"line-numbers code-toolbar language-scss\\"><code class=\\"language-scss\\"><span class=\\"token keyword\\">@mixin</span> <span class=\\"token function\\">react-md-buttons</span><span class=\\"token punctuation\\">(</span>
  <span class=\\"token property\\"><span class=\\"token variable\\">$primary-color</span></span><span class=\\"token punctuation\\">:</span> <span class=\\"token variable\\">$md-primary-color</span>,
  <span class=\\"token property\\"><span class=\\"token variable\\">$secondary-color</span></span><span class=\\"token punctuation\\">:</span> <span class=\\"token variable\\">$md-secondary-color</span>,
  <span class=\\"token property\\"><span class=\\"token variable\\">$light-theme</span></span><span class=\\"token punctuation\\">:</span> <span class=\\"token variable\\">$md-light-theme</span>,
  <span class=\\"token property\\"><span class=\\"token variable\\">$include-media</span></span><span class=\\"token punctuation\\">:</span> <span class=\\"token variable\\">$md-media-included</span>,
  <span class=\\"token property\\"><span class=\\"token variable\\">$include-flat</span></span><span class=\\"token punctuation\\">:</span> <span class=\\"token variable\\">$md-btn-include-flat</span>,
  <span class=\\"token property\\"><span class=\\"token variable\\">$include-raised</span></span><span class=\\"token punctuation\\">:</span> <span class=\\"token variable\\">$md-btn-include-raised</span>,
  <span class=\\"token property\\"><span class=\\"token variable\\">$include-icon</span></span><span class=\\"token punctuation\\">:</span> <span class=\\"token variable\\">$md-btn-include-icon</span>,
  <span class=\\"token property\\"><span class=\\"token variable\\">$include-floating</span></span><span class=\\"token punctuation\\">:</span> <span class=\\"token variable\\">$md-btn-include-floating</span>,
  <span class=\\"token property\\"><span class=\\"token variable\\">$include-dense-icons</span></span><span class=\\"token punctuation\\">:</span> <span class=\\"token variable\\">$md-font-icon-include-dense</span>
<span class=\\"token punctuation\\">)</span> <span class=\\"token punctuation\\">{</span>
  <span class=\\"token comment\\">// scss-lint:disable QualifyingElement</span>
  <span class=\\"token selector\\">a.md-btn </span><span class=\\"token punctuation\\">{</span>
    <span class=\\"token property\\">text-decoration</span><span class=\\"token punctuation\\">:</span> none<span class=\\"token punctuation\\">;</span>
  <span class=\\"token punctuation\\">}</span>

  <span class=\\"token selector\\">.md-btn </span><span class=\\"token punctuation\\">{</span>
    <span class=\\"token property\\">background</span><span class=\\"token punctuation\\">:</span> transparent<span class=\\"token punctuation\\">;</span>
    <span class=\\"token property\\">border</span><span class=\\"token punctuation\\">:</span> <span class=\\"token number\\">0</span><span class=\\"token punctuation\\">;</span>
    <span class=\\"token property\\">position</span><span class=\\"token punctuation\\">:</span> relative<span class=\\"token punctuation\\">;</span>
    <span class=\\"token property\\">transition-duration</span><span class=\\"token punctuation\\">:</span> <span class=\\"token variable\\">$md-transition-time</span><span class=\\"token punctuation\\">;</span>
    <span class=\\"token property\\">transition-property</span><span class=\\"token punctuation\\">:</span> background, color<span class=\\"token punctuation\\">;</span>

    <span class=\\"token comment\\">// Prevents click event from firing when clicking a child</span>
    <span class=\\"token selector\\"><span class=\\"token parent important\\">&amp;</span>[disabled] * </span><span class=\\"token punctuation\\">{</span>
      <span class=\\"token property\\">pointer-events</span><span class=\\"token punctuation\\">:</span> none<span class=\\"token punctuation\\">;</span>
    <span class=\\"token punctuation\\">}</span>

    <span class=\\"token selector\\"><span class=\\"token parent important\\">&amp;</span>:focus </span><span class=\\"token punctuation\\">{</span>
      <span class=\\"token property\\">outline-style</span><span class=\\"token punctuation\\">:</span> none<span class=\\"token punctuation\\">;</span>
    <span class=\\"token punctuation\\">}</span>

    <span class=\\"token selector\\">.md-icon </span><span class=\\"token punctuation\\">{</span>
      <span class=\\"token property\\">color</span><span class=\\"token punctuation\\">:</span> inherit<span class=\\"token punctuation\\">;</span>
    <span class=\\"token punctuation\\">}</span>

    <span class=\\"token selector\\">.md-icon-separator </span><span class=\\"token punctuation\\">{</span>
      <span class=\\"token property\\">height</span><span class=\\"token punctuation\\">:</span> <span class=\\"token number\\">100%</span><span class=\\"token punctuation\\">;</span>
    <span class=\\"token punctuation\\">}</span>

    <span class=\\"token selector\\">.md-icon-text </span><span class=\\"token punctuation\\">{</span>
      <span class=\\"token keyword\\">@extend</span> <span class=\\"token number\\">%</span>md-font-medium<span class=\\"token punctuation\\">;</span>
    <span class=\\"token punctuation\\">}</span>
  <span class=\\"token punctuation\\">}</span>

  <span class=\\"token selector\\">.md-btn--hover </span><span class=\\"token punctuation\\">{</span>
    <span class=\\"token property\\">background</span><span class=\\"token punctuation\\">:</span> <span class=\\"token function\\">if</span><span class=\\"token punctuation\\">(</span><span class=\\"token variable\\">$light-theme</span>, <span class=\\"token variable\\">$md-btn-light-theme-hover-color</span>, <span class=\\"token variable\\">$md-btn-dark-theme-hover-color</span><span class=\\"token punctuation\\">)</span><span class=\\"token punctuation\\">;</span>
  <span class=\\"token punctuation\\">}</span>

  <span class=\\"token selector\\">.md-btn--color-primary-active </span><span class=\\"token punctuation\\">{</span>
    <span class=\\"token property\\">background</span><span class=\\"token punctuation\\">:</span> <span class=\\"token function\\">rgba</span><span class=\\"token punctuation\\">(</span><span class=\\"token variable\\">$primary-color</span>, <span class=\\"token number\\">.12</span><span class=\\"token punctuation\\">)</span><span class=\\"token punctuation\\">;</span>
  <span class=\\"token punctuation\\">}</span>

  <span class=\\"token selector\\">.md-btn--color-secondary-active </span><span class=\\"token punctuation\\">{</span>
    <span class=\\"token property\\">background</span><span class=\\"token punctuation\\">:</span> <span class=\\"token function\\">rgba</span><span class=\\"token punctuation\\">(</span><span class=\\"token variable\\">$secondary-color</span>, <span class=\\"token number\\">.12</span><span class=\\"token punctuation\\">)</span><span class=\\"token punctuation\\">;</span>
  <span class=\\"token punctuation\\">}</span>

  <span class=\\"token keyword\\">@if</span> <span class=\\"token selector\\"><span class=\\"token variable\\">$include-flat</span> or <span class=\\"token variable\\">$include-raised</span> </span><span class=\\"token punctuation\\">{</span>
    <span class=\\"token selector\\">.md-btn--text </span><span class=\\"token punctuation\\">{</span>
      <span class=\\"token property\\">border-radius</span><span class=\\"token punctuation\\">:</span> <span class=\\"token variable\\">$md-btn-text-border-radius</span><span class=\\"token punctuation\\">;</span>
      <span class=\\"token property\\">font-size</span><span class=\\"token punctuation\\">:</span> <span class=\\"token variable\\">$md-btn-text-font-size</span><span class=\\"token punctuation\\">;</span>
      <span class=\\"token property\\">font-weight</span><span class=\\"token punctuation\\">:</span> <span class=\\"token variable\\">$md-font-medium</span><span class=\\"token punctuation\\">;</span>
      <span class=\\"token property\\">height</span><span class=\\"token punctuation\\">:</span> <span class=\\"token variable\\">$md-btn-text-height</span><span class=\\"token punctuation\\">;</span>
      <span class=\\"token property\\">min-width</span><span class=\\"token punctuation\\">:</span> <span class=\\"token variable\\">$md-btn-min-width</span><span class=\\"token punctuation\\">;</span>
      <span class=\\"token property\\">padding</span><span class=\\"token punctuation\\">:</span> <span class=\\"token variable\\">$md-btn-tb-padding</span> <span class=\\"token variable\\">$md-btn-lr-padding</span><span class=\\"token punctuation\\">;</span>
      <span class=\\"token property\\">text-transform</span><span class=\\"token punctuation\\">:</span> uppercase<span class=\\"token punctuation\\">;</span>
    <span class=\\"token punctuation\\">}</span>
  <span class=\\"token punctuation\\">}</span>

  <span class=\\"token keyword\\">@if</span> <span class=\\"token selector\\"><span class=\\"token variable\\">$include-raised</span> or <span class=\\"token variable\\">$include-floating</span> </span><span class=\\"token punctuation\\">{</span>
    <span class=\\"token selector\\">.md-btn--raised </span><span class=\\"token punctuation\\">{</span>
      <span class=\\"token keyword\\">@include</span> <span class=\\"token function\\">md-box-shadow</span><span class=\\"token punctuation\\">(</span><span class=\\"token number\\">1</span><span class=\\"token punctuation\\">)</span><span class=\\"token punctuation\\">;</span>

      <span class=\\"token property\\">transition</span><span class=\\"token punctuation\\">:</span> background <span class=\\"token variable\\">$md-transition-time</span>, box-shadow <span class=\\"token variable\\">$md-transition-time</span> <span class=\\"token operator\\">*</span> <span class=\\"token number\\">2</span>, color <span class=\\"token variable\\">$md-transition-time</span><span class=\\"token punctuation\\">;</span>
    <span class=\\"token punctuation\\">}</span>

    <span class=\\"token selector\\">.md-btn--raised-disabled </span><span class=\\"token punctuation\\">{</span>
      <span class=\\"token property\\">background</span><span class=\\"token punctuation\\">:</span> <span class=\\"token function\\">get-color</span><span class=\\"token punctuation\\">(</span><span class=\\"token string\\">'divider'</span>, <span class=\\"token variable\\">$light-theme</span><span class=\\"token punctuation\\">)</span><span class=\\"token punctuation\\">;</span>
    <span class=\\"token punctuation\\">}</span>

    <span class=\\"token selector\\">.md-btn--raised-pressed </span><span class=\\"token punctuation\\">{</span>
      <span class=\\"token keyword\\">@include</span> <span class=\\"token function\\">md-box-shadow</span><span class=\\"token punctuation\\">(</span><span class=\\"token number\\">2</span><span class=\\"token punctuation\\">)</span><span class=\\"token punctuation\\">;</span>
    <span class=\\"token punctuation\\">}</span>
  <span class=\\"token punctuation\\">}</span>

  <span class=\\"token keyword\\">@if</span> <span class=\\"token selector\\"><span class=\\"token variable\\">$include-icon</span> or <span class=\\"token variable\\">$include-floating</span> </span><span class=\\"token punctuation\\">{</span>
    <span class=\\"token selector\\">.md-btn--icon </span><span class=\\"token punctuation\\">{</span>
      <span class=\\"token property\\">border-radius</span><span class=\\"token punctuation\\">:</span> <span class=\\"token variable\\">$md-btn-icon-border-radius</span><span class=\\"token punctuation\\">;</span>
      <span class=\\"token property\\">color</span><span class=\\"token punctuation\\">:</span> <span class=\\"token function\\">get-color</span><span class=\\"token punctuation\\">(</span><span class=\\"token string\\">'icon'</span>, <span class=\\"token variable\\">$light-theme</span><span class=\\"token punctuation\\">)</span><span class=\\"token punctuation\\">;</span>
      <span class=\\"token property\\">height</span><span class=\\"token punctuation\\">:</span> <span class=\\"token variable\\">$md-btn-icon-size</span><span class=\\"token punctuation\\">;</span>
      <span class=\\"token property\\">padding</span><span class=\\"token punctuation\\">:</span> <span class=\\"token variable\\">$md-btn-icon-padding</span><span class=\\"token punctuation\\">;</span>
      <span class=\\"token property\\">width</span><span class=\\"token punctuation\\">:</span> <span class=\\"token variable\\">$md-btn-icon-size</span><span class=\\"token punctuation\\">;</span>
    <span class=\\"token punctuation\\">}</span>
  <span class=\\"token punctuation\\">}</span>

  <span class=\\"token keyword\\">@if</span> <span class=\\"token selector\\"><span class=\\"token variable\\">$include-floating</span> </span><span class=\\"token punctuation\\">{</span>
    <span class=\\"token selector\\">.md-btn--floating </span><span class=\\"token punctuation\\">{</span>
      <span class=\\"token keyword\\">@include</span> <span class=\\"token function\\">md-box-shadow</span><span class=\\"token punctuation\\">(</span><span class=\\"token number\\">2</span><span class=\\"token punctuation\\">)</span><span class=\\"token punctuation\\">;</span>

      <span class=\\"token property\\">height</span><span class=\\"token punctuation\\">:</span> <span class=\\"token variable\\">$md-btn-floating-size</span><span class=\\"token punctuation\\">;</span>
      <span class=\\"token property\\">padding</span><span class=\\"token punctuation\\">:</span> <span class=\\"token punctuation\\">(</span><span class=\\"token variable\\">$md-btn-floating-size</span> <span class=\\"token operator\\">-</span> <span class=\\"token variable\\">$md-font-icon-size</span><span class=\\"token punctuation\\">)</span> <span class=\\"token operator\\">/</span> <span class=\\"token number\\">2</span><span class=\\"token punctuation\\">;</span>
      <span class=\\"token property\\">transition-property</span><span class=\\"token punctuation\\">:</span> background, box-shadow, color<span class=\\"token punctuation\\">;</span>
      <span class=\\"token property\\">width</span><span class=\\"token punctuation\\">:</span> <span class=\\"token variable\\">$md-btn-floating-size</span><span class=\\"token punctuation\\">;</span>
    <span class=\\"token punctuation\\">}</span>

    <span class=\\"token selector\\">.md-btn--floating-pressed </span><span class=\\"token punctuation\\">{</span>
      <span class=\\"token keyword\\">@include</span> <span class=\\"token function\\">md-box-shadow</span><span class=\\"token punctuation\\">(</span><span class=\\"token number\\">4</span><span class=\\"token punctuation\\">)</span><span class=\\"token punctuation\\">;</span>
    <span class=\\"token punctuation\\">}</span>

    <span class=\\"token selector\\">.md-btn--floating-mini </span><span class=\\"token punctuation\\">{</span>
      <span class=\\"token property\\">height</span><span class=\\"token punctuation\\">:</span> <span class=\\"token variable\\">$md-btn-floating-mini-size</span><span class=\\"token punctuation\\">;</span>
      <span class=\\"token property\\">padding</span><span class=\\"token punctuation\\">:</span> <span class=\\"token punctuation\\">(</span><span class=\\"token variable\\">$md-btn-floating-mini-size</span> <span class=\\"token operator\\">-</span> <span class=\\"token variable\\">$md-font-icon-size</span><span class=\\"token punctuation\\">)</span> <span class=\\"token operator\\">/</span> <span class=\\"token number\\">2</span><span class=\\"token punctuation\\">;</span>
      <span class=\\"token property\\">width</span><span class=\\"token punctuation\\">:</span> <span class=\\"token variable\\">$md-btn-floating-mini-size</span><span class=\\"token punctuation\\">;</span>
    <span class=\\"token punctuation\\">}</span>

    <span class=\\"token selector\\">.md-btn--fixed </span><span class=\\"token punctuation\\">{</span>
      <span class=\\"token property\\">position</span><span class=\\"token punctuation\\">:</span> fixed<span class=\\"token punctuation\\">;</span>
      <span class=\\"token property\\">z-index</span><span class=\\"token punctuation\\">:</span> <span class=\\"token variable\\">$md-btn-fixed-z-index</span><span class=\\"token punctuation\\">;</span>
    <span class=\\"token punctuation\\">}</span>

    <span class=\\"token keyword\\">@if</span> <span class=\\"token selector\\"><span class=\\"token variable\\">$md-btn-floating-margin</span> != null </span><span class=\\"token punctuation\\">{</span>
      <span class=\\"token keyword\\">@include</span> <span class=\\"token function\\">react-md-button-fixed-positions</span><span class=\\"token punctuation\\">(</span><span class=\\"token variable\\">$md-btn-floating-margin</span><span class=\\"token punctuation\\">)</span><span class=\\"token punctuation\\">;</span>
    <span class=\\"token punctuation\\">}</span>
  <span class=\\"token punctuation\\">}</span>

  <span class=\\"token keyword\\">@if</span> <span class=\\"token selector\\"><span class=\\"token variable\\">$include-media</span> </span><span class=\\"token punctuation\\">{</span>
    <span class=\\"token keyword\\">@include</span> <span class=\\"token function\\">react-md-buttons-media</span><span class=\\"token punctuation\\">(</span><span class=\\"token variable\\">$include-flat</span>, <span class=\\"token variable\\">$include-raised</span>, <span class=\\"token variable\\">$include-icon</span>, <span class=\\"token variable\\">$include-floating</span>, <span class=\\"token variable\\">$include-dense-icons</span><span class=\\"token punctuation\\">)</span><span class=\\"token punctuation\\">;</span>
  <span class=\\"token punctuation\\">}</span>
<span class=\\"token punctuation\\">}</span>
<span aria-hidden=\\"true\\" class=\\"line-numbers-rows\\"><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span></span></code><div class=\\"toolbar\\"><div class=\\"toolbar-item\\"><span>Sass (Scss)</span></div></pre>
",
      }
    }
    disabled={undefined}
    onBlur={[Function]}
    onClick={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    role="button"
    style={undefined}
    tabIndex={0}
  />
  <h5
    className="md-cell--right md-color--secondary-text md-text-right expandable-source__label"
  >
    Click to collapse
  </h5>
</div>
`;

exports[`ExpandableSource should render correctly while collapsed 1`] = `
<div
  aria-pressed={false}
  className="md-fake-btn md-fake-btn--no-outline markdown-container md-paper md-paper--1 expandable-source"
  dangerouslySetInnerHTML={
    Object {
      "__html": "<pre class=\\"line-numbers code-toolbar language-scss\\"><code class=\\"language-scss\\"><span class=\\"token property\\"><span class=\\"token variable\\">$md-primary-color</span></span><span class=\\"token punctuation\\">:</span> <span class=\\"token variable\\">$md-red-500</span><span class=\\"token punctuation\\">;</span>
</code><div class=\\"toolbar\\"><div class=\\"toolbar-item\\"><span>Sass (Scss)</span></div></pre>
",
    }
  }
  disabled={true}
  onBlur={[Function]}
  onClick={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  role="button"
  tabIndex={null}
/>
`;

exports[`ExpandableSource should render correctly while collapsed 2`] = `
<div>
  <div
    aria-pressed={false}
    className="md-fake-btn md-pointer--hover md-fake-btn--no-outline markdown-container md-paper md-paper--1 expandable-source"
    dangerouslySetInnerHTML={
      Object {
        "__html": "<pre class=\\"line-numbers code-toolbar language-scss\\"><code class=\\"language-scss\\"><span class=\\"token keyword\\">@mixin</span> <span class=\\"token function\\">react-md-buttons</span><span class=\\"token punctuation\\">(</span><span class=\\"token property\\"><span class=\\"token variable\\">$primary-color</span></span><span class=\\"token punctuation\\">:</span> <span class=\\"token variable\\">$md-primary-color</span>, <span class=\\"token property\\"><span class=\\"token variable\\">$secondary-color</span></span><span class=\\"token punctuation\\">:</span> <span class=\\"token variable\\">$md-secondary-color</span>, <span class=\\"token property\\"><span class=\\"token variable\\">$light-theme</span></span><span class=\\"token punctuation\\">:</span> <span class=\\"token variable\\">$md-light-theme</span>, <span class=\\"token property\\"><span class=\\"token variable\\">$include-media</span></span><span class=\\"token punctuation\\">:</span> <span class=\\"token variable\\">$md-media-included</span>, <span class=\\"token property\\"><span class=\\"token variable\\">$include-flat</span></span><span class=\\"token punctuation\\">:</span> <span class=\\"token variable\\">$md-btn-include-flat</span>, <span class=\\"token property\\"><span class=\\"token variable\\">$include-raised</span></span><span class=\\"token punctuation\\">:</span> <span class=\\"token variable\\">$md-btn-include-raised</span>, <span class=\\"token property\\"><span class=\\"token variable\\">$include-icon</span></span><span class=\\"token punctuation\\">:</span> <span class=\\"token variable\\">$md-btn-include-icon</span>, <span class=\\"token property\\"><span class=\\"token variable\\">$include-floating</span></span><span class=\\"token punctuation\\">:</span> <span class=\\"token variable\\">$md-btn-include-floating</span>, <span class=\\"token property\\"><span class=\\"token variable\\">$include-dense-icons</span></span><span class=\\"token punctuation\\">:</span> <span class=\\"token variable\\">$md-font-icon-include-dense</span><span class=\\"token punctuation\\">)</span> <span class=\\"token punctuation\\">{</span> <span class=\\"token number\\">...</span> <span class=\\"token punctuation\\">}</span>
</code><div class=\\"toolbar\\"><div class=\\"toolbar-item\\"><span>Sass (Scss)</span></div></pre>
",
      }
    }
    disabled={undefined}
    onBlur={[Function]}
    onClick={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    role="button"
    style={undefined}
    tabIndex={0}
  />
  <h5
    className="md-cell--right md-color--secondary-text md-text-right expandable-source__label"
  >
    Click to expand
  </h5>
</div>
`;
